--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -13,4 +13,8 @@
     tools:context="com.independentdev.together.ui.activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/showCaseViewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
