--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -17,6 +17,10 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/showCaseViewPager"
         android:layout_width="match_parent"
-        android:layout_height="175dp"
-        android:background="@color/colorPrimaryDark" />
+        android:layout_height="175dp" />
+
+    <ImageView
+        android:id="@+id/testImg"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
 </LinearLayout>
