--- a/app/src/main/res/layout/show_case_fragment.xml
+++ b/app/src/main/res/layout/show_case_fragment.xml
@@ -8,7 +8,8 @@
         android:id="@+id/showCaseSlideIMV"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray" />
+        android:background="@android:color/darker_gray"
+        android:scaleType="centerCrop" />
 
     <TextView
         android:id="@+id/showCaseTitle"
