--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.independentdev.together.ui.activity.SplashScreenActivity">
+    tools:context="com.independentdev.writer.ui.activity.SplashScreenActivity">
 
     <TextView
         android:id="@+id/splashTV"
