--- a/app/src/main/res/layout/show_case_fragment.xml
+++ b/app/src/main/res/layout/show_case_fragment.xml
@@ -1,30 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/showCaseSlideIMV"
+    <android.support.v7.widget.CardView
+        android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"
-        android:scaleType="centerCrop" />
+        app:cardBackgroundColor="@color/transperent"
+        app:cardCornerRadius="10dp">
 
-    <TextView
-        android:id="@+id/showCaseTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:fontFamily="sans-serif-light"
-        android:gravity="center_horizontal"
-        android:paddingBottom="@dimen/ten_dp"
-        android:paddingEnd="@dimen/five_dp"
-        android:paddingStart="@dimen/five_dp"
-        android:paddingTop="@dimen/five_dp"
-        android:text="@string/app_name"
-        android:textColor="@android:color/white"
-        android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/showCaseSlideIMV"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/darker_gray"
+            android:scaleType="centerCrop" />
+
+        <TextView
+            android:id="@+id/showCaseTitle"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:layout_gravity="bottom"
+            android:background="#50000000"
+            android:fontFamily="sans-serif-light"
+            android:gravity="center"
+            android:text="@string/app_name"
+            android:textSize="18sp"
+            android:textColor="@android:color/white"
+            android:textStyle="bold" />
+    </android.support.v7.widget.CardView>
+
+
 </RelativeLayout>
