--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00897B</color>
-    <color name="colorPrimaryDark">#26A69A</color>
+    <color name="colorPrimary">#2d2d3e</color>
+    <color name="colorPrimaryDark">#25252F</color>
     <color name="colorAccent">#006064</color>
+    <color name="white">#FFFFFF</color>
+    <color name="transperent">#00000000</color>
 </resources>
