--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -19,6 +19,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/large_text" />
+            android:text="@string/splash_text" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
