--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#2d2d3e</color>
     <color name="colorPrimaryDark">#25252F</color>
-    <color name="colorAccent">#006064</color>
+    <color name="colorAccent">#3b5998</color>
     <color name="white">#FFFFFF</color>
     <color name="transperent">#00000000</color>
 </resources>
