--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/userCoverPic"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@string/user_pic"
+        android:contentDescription="@string/cover_pic"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:scaleType="centerCrop"
         android:src="@drawable/nav_header_bg" />
@@ -37,7 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="@dimen/nav_header_vertical_spacing"
-            android:text="@string/user_name"
+            android:text="@string/my_name"
             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
         <TextView
