--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,9 @@
 <resources>
     <color name="colorPrimary">#2d2d3e</color>
     <color name="colorPrimaryDark">#25252F</color>
-    <color name="colorAccent">#3b5998</color>
-    <color name="white">#FFFFFF</color>
+    <color name="colorAccent">#1ad1cc</color>
+    <color name="white">#FEFFFF</color>
     <color name="transperent">#00000000</color>
+    <color name="login_bg">#174557</color>
+    <color name="silver_tree">#56D491</color>
 </resources>
