Added Callbacks for Login Methods

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     android:id="@+id/activity_login"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/login_bg"
+    android:background="@color/colorPrimary"
     android:gravity="center"
     tools:context="com.independentdev.ink.ui.activity.LoginActivity">
 
